--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,9 +27,46 @@
       <li class="active"><a href="/sign_in">Sign In</a></li>
     </ul>
 
+
     <!-- Left Nav Section -->
     <ul class="left">
       <li><a href="/add_link">Add Link</a></li>
     </ul>
   </section>
 </nav>
+
+
+<footer class="footer">
+  <div class="row full-width">
+    <div class="small-12 medium-3 large-4 columns">
+      <i class=""></i>
+      <p></p>
+    </div>
+    <div class="small-12 medium-3 large-4 columns">
+      <i class=""></i>
+      <p></p>
+    </div>
+    <div class="small-6 medium-3 large-2 columns">
+      <h4>Work With Me</h4>
+      <ul class="footer-links">
+        <li><a href="#">What I Do</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">FAQ's</a></li>
+      <ul>
+    </div>
+    <div class="small-6 medium-3 large-2 columns">
+      <h4>Follow Me</h4>
+      <ul class="footer-links">
+        <li><a href="#">GitHub</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Dribbble</a></li>
+      <ul>
+    </div>
+  </div>
+</footer>
+
+
