--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,23 +45,21 @@
       <p></p>
     </div>
     <div class="small-6 medium-3 large-2 columns">
-      <h4>Work With Me</h4>
+      <h4>Makers Academy Provides</h4>
       <ul class="footer-links">
-        <li><a href="#">What I Do</a></li>
-        <li><a href="#">Pricing</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Blog</a></li>
+        <li><a href="#">Help</a></li>
         <li><a href="#">FAQ's</a></li>
       <ul>
     </div>
     <div class="small-6 medium-3 large-2 columns">
-      <h4>Follow Me</h4>
+      <h4>Follow Us at Makers Academy</h4>
       <ul class="footer-links">
         <li><a href="#">GitHub</a></li>
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Twitter</a></li>
         <li><a href="#">Instagram</a></li>
-        <li><a href="#">Dribbble</a></li>
       <ul>
     </div>
   </div>
