--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,12 +1,11 @@
-
-<%=form('/dashboard', :post)%>
-<p>User name</p>
-<%=input(:user, :username)%>
-<p>E-mail</p>
-<%=input(:user, :email, :size => 40)%>
-<p>Password</p>
-<%=input(:user, :password)%>
-<%= submit %>
+  <p>Sign Up</p>
+  <form action="/dashboard" method="post" >
+  <p>E-mail:</p>
+  <input type="text" name="email">
+  <p>Password:</p><br>
+  <input type="text" name="password">
+  <input type="submit" value="submit">
+  </form>
 
 <!-- <div class="center row">
   <div class="section-container tabs" data-section="tabs">
