--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -4,6 +4,7 @@
   <input type="text" name="email">
   <p>Password:</p><br>
   <input type="text" name="password">
+  <input type="text" name="password_confirmation">
   <input type="submit" value="submit">
   </form>
 
