add working feature test user sign up

--- a/views/add_link.erb
+++ b/views/add_link.erb
@@ -1,5 +1,5 @@
   <p>Add link</p>
-  <form action="/new_link" method="post" >
+  <form action="/new_link" method="POST" >
   <p>Title:</p><br>
   <input type="text" name="title">
   <p>Description:</p><br>
