--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,11 +1,11 @@
   <p>Sign Up</p>
-  <form action="/dashboard" method="post" >
+  <form action="/sign_up_success" method="post" >
   <p>E-mail:</p>
   <input type="text" name="email">
   <p>Password:</p><br>
   <input type="text" name="password">
   <input type="text" name="password_confirmation">
-  <input type="submit" value="submit">
+  <input type="submit" value="Sign Up">
   </form>
 
 <!-- <div class="center row">
