fixed get route to dashboard

--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,5 +1,5 @@
   <p>Sign Up</p>
-  <form action="/sign_up_success" method="post" >
+  <form action="/sign_up" method="post" >
   <p>E-mail:</p>
   <input type="text" name="email">
   <p>Password:</p><br>
