--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,5 +1,5 @@
   <p>Sign In</p>
-  <form action="/dashboard" method="post" >
+  <form action="/sign_in" method="post" >
   <p>E-mail:</p>
   <input type="text" name="email">
   <p>Password:</p><br>
