fixed who creates links

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <main>
 <div>
-<% @links.each do |link| %>
+<% @links.reverse_each do |link| %>
   <small>Url:</small><br> <a href="<%= link[:url] %>"><%= link[:title]%></a>
    <p><small>Description:</small><br><%= link[:description]%></p>
   <p>
